--- a/clients/client/src/features/home/home.html
+++ b/clients/client/src/features/home/home.html
@@ -21,7 +21,8 @@
   </div>
   } @else {
   <div class="w-full text-2xl text-center flex justify-center">
-    Register Form goes here
+ 
+    <app-register class="w-full"></app-register>
   </div>
   }
 
