--- a/clients/client/src/features/account/register/register.html
+++ b/clients/client/src/features/account/register/register.html
@@ -1,23 +1,22 @@
 <div class="card bg-base-100 w-1/2 mx-auto flex flex-col p-6 rounded-lg shadow-lg">
   <div class="card-title justify-center text-3xl text-primary">Sign up</div>
-<div class="card-body w-full">
-  <form #registerForm="ngForm" class="flex flex-col gap-4 w-full" (ngSubmit)="register()">
-    <input type="text" class="input w-full" name="email" [(ngModel)]="creds.email" placeholder="Email"/>
-    <input type="text" class="input w-full" name="displayName" [(ngModel)]="creds.displayName" placeholder="Display Name" />
-    <input type="password" class="input w-full" name="password" [(ngModel)]="creds.password"  placeholder="Password"/>
-    <select class="select w-full">
-      <option disabled selected>Pick a member</option>
-      @for(member of membersFromHome(); track $index)
-      {
-      <option value="{{member.id}}">{{member.token}}</option>
-      }
-    </select>
-    <div class="flex items-center justify-end gap-3">
-      <button class="btn">Cancel</button>
-      <button class="btn btn-primary" type="submit">Register</button>
-    </div>
-  </form>
+  <div class="card-body w-full">
+    <form #registerForm="ngForm" class="flex flex-col gap-4 w-full" (ngSubmit)="register()">
+      <input type="text" class="input w-full" name="email" [(ngModel)]="creds.email" placeholder="Email" />
+      <input type="text" class="input w-full" name="displayName" [(ngModel)]="creds.displayName" placeholder="Display Name" />
+      <input type="password" class="input w-full" name="password" [(ngModel)]="creds.password" placeholder="Password" />
 
-</div>
+      <!-- Dropdown for members -->
+      <select class="select w-full">
+        <option disabled selected>Pick a member</option>
+        <!-- Use Angular *ngFor to loop through members -->
+        <option *ngFor="let member of membersFromHome" [value]="member.id">{{member.token}}</option>
+      </select>
 
+      <div class="flex items-center justify-end gap-3">
+        <button class="btn">Cancel</button>
+        <button class="btn btn-primary" type="submit">Register</button>
+      </div>
+    </form>
+  </div>
 </div>
