--- a/clients/client/src/features/home/home.html
+++ b/clients/client/src/features/home/home.html
@@ -10,7 +10,8 @@
       <p class="py-6">Come on in... all you need to do is sign up</p>
       <div class="flex items-center gap-3">
 
-        <button (click)="showRegister(true)"
+        <button
+                (click)="showRegister(true)"
                 class="btn btn-primary btn-lg">
           Register
         </button>
@@ -21,7 +22,8 @@
   </div>
   } @else {
   <div class="w-full text-2xl text-center flex justify-center">
-    <app-register [membersFromHome]="membersFromApp" class="w-full"></app-register>
+    <app-register [membersFromHome]="membersFromApp" class="w-full"
+                  (cancelRegister)="showRegister($event)"></app-register>
   </div>
 
   }
